2013-12-27  Sancho Lerena <slerena@artica.es>

	*  util/pandora_backup.sh: Added parameter to ensure max_allowed_packet
	is limited to 32M on SQL Dump.

2013-12-26  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed wrong time comparison in planned
	downtime.

2013-11-26  KIKUCHI koichiro <koichiro@rworks.jp>

	* util/pandora_remote_agent.sh: Added "-e" option to be able to
	 specify character encoding of the output XML. Also added PID
	 number to the output file name to avoid race conditions.
 
2013-11-26  KIKUCHI koichiro <koichiro@rworks.jp>

	* lib/PandoraFMS/DB.pm: Fixed get_agent_status to return warning status
	 correctly.

2013-11-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed a bug when a parent was defined but
	  empty in the XML and an agent with an empty address existed in the
	  database.

2013-11-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  conf/pandora_server.conf.new: Added support for CURL web checks.

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Change the format of the comments when
	create event from server to adapt it to new json format

2013-11-08  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Copy the new pandora_server.conf.new to /etc/pandora/.

2013-11-07 Axel Amigo <axel.amigo@artica.es>

	* ChangeLog: Added description of the last commit

2013-11-07 Axel Amigo <axel.amigo@artica.es>

	* pandora_server\lib\PandoraFMS\Config.pm: Added support for SNMP Forwarding tokens

	*pandora_server\lib\PandoraFMS\SNMPServer.pm: Added new SNMP forwarding feature

2013-11-06  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_revent_create.pl: Adapt the script
	of event creation to new API version. Fix by Tomas
	in Incident #347

2013-10-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DataServer.pm: Add check to update
	adopted unlinked data modules

2013-10-28  Sergio Martin <sergio.martin@artica.es>
