@@ -1,3 +1,10 @@
+2014-01-06  Junichi Satoh <junichi@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Fixed that planned downtime is disabled
+	between continuous time settings.
+	eg) If there are two settings like xx:xx:xx-23:59:59 and
+	00:00:00-yy:yy:yy, planned downtime was disabled around 00:00:00.
+
 2013-12-27  Sancho Lerena <slerena@artica.es>
 
 	*  util/pandora_backup.sh: Added parameter to ensure max_allowed_packet
